--- a/style/main.css
+++ b/style/main.css
@@ -3,13 +3,6 @@ body {
     color: #FFFFFF;
 }
 
-header {
-    position: absolute;
-    width: 100%;
-    padding: 0 160px;
-    z-index: 10;
-}
-
 .gradient {
     border-radius: 0 0 12px 12px;
     background: var(--gradient-supersoft, linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%));
@@ -27,6 +20,10 @@ header {
     margin: 0 auto;
 }
 
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    --bs-gutter-x: 0;
+}
+
 .block {
     max-width: 1600px;
     margin: 0 auto;
@@ -36,6 +33,13 @@ header {
 a {
     text-decoration: none;
     color: #FFFFFF;
+}
+
+header {
+    position: absolute;
+    width: 100%;
+    padding: 0 160px;
+    z-index: 10;
 }
 
 .header_menu {
@@ -119,6 +123,13 @@ a {
     padding-bottom: 3px;
 }
 
+h1 {
+    text-align: center;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: normal;
+}
+
 h2 {
     font-size: 38px;
 }
@@ -170,11 +181,35 @@ h2 {
     position: relative;
 }
 
-.info_first h2, .advantages h2 {
+.nav {
+    --bs-nav-link-color: none;
+    --bs-nav-link-hover-color: none;
+}
+
+
+.nav-link, .advantages h2 {
     color: #B3B3BA;
 }
 
-.highlight:hover {
+.nav-link {
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding: 0;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: transparent;
+}
+
+.nav-link:hover {
+    color: #F0145A;
+}
+
+.nav-link.active{
     background: var(--gradient-text-red-reversed, linear-gradient(90deg, #EF8080 0.84%, #F0145A 99.96%));
     background-clip: text;
     -webkit-background-clip: text;
@@ -244,7 +279,7 @@ h2 {
     stroke: #F0145A;
 }
 
-.advantages h2, .slider_info h2, .news h2 {
+.advantages h2, .slider_info h2, .news h2, .services_main_block h2 {
     background: var(--gradient-red-text, linear-gradient(90deg, #F0145A 0.84%, #EF8080 99.96%));
     background-clip: text;
     -webkit-background-clip: text;
@@ -256,9 +291,9 @@ h2 {
 }
 
 .advantages_list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     flex-direction: row;
-    flex-wrap: wrap;
     gap: 60px;
     padding-top: 60px;
 }
@@ -266,10 +301,9 @@ h2 {
 .advantages_item {
     display: flex;
     flex-direction: column;
-    flex: 1 0 calc(33.33% - 60px);
 }
 
-.advantages_img {
+.advantages_image, .services_image {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -279,7 +313,7 @@ h2 {
     border-radius: 24px;
 }
 
-.advantages_item img {
+.advantages_item img, .services_image img {
     width: 64px;
     height: 64px;
 }
@@ -291,8 +325,17 @@ h2 {
     padding-bottom: 15px;
 }
 
+.center_advantage {
+    max-width: 300px;
+    width: 100%;
+}
+
 .advantages_item a {
     color: #24A3FF;
+}
+
+.advantages_item a:hover, .news_content a:hover {
+    color: #F0145A;
 }
 
 .advantages_item p {
@@ -337,14 +380,19 @@ h2 {
     display: flex;
     background: #EDEDF7;
     border-radius: 12px;
-    height: 298px;
+    min-height: 298px;
     width: calc(100% + 2px);
     padding: 0 1px;
 }
 
 .slider_image {
-    width: 400px;
-    background: url('../images/image.jpg') no-repeat;
+    min-width: 400px;
+    min-height: 298px;
+    align-self: stretch;
+    background: url(../images/image.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 12px 0 0 12px;
     background-size: cover;
 }
 
@@ -410,7 +458,7 @@ h2 {
 
 .partners_logo {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     max-width: 1720px;
     width: 100%;
     border-radius: 12px;
@@ -503,7 +551,7 @@ h2 {
     border-radius: 8px;
     overflow: hidden;
     background-color: #FFFFFF;
-    min-width: 300px;
+    min-width: 282px;
 }
 
 .news_block_item .news-img-1, .news_block_item .news-img-2, .news_block_item .news-img-3 {
@@ -583,12 +631,18 @@ footer::before {
     width: 100%;
 }
 
-.footer_info {
-    background-color: #F5F5FA;
-    padding-bottom: 21px;
+.footer_content {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+}
+
+.footer_info {
+    background-color: #F5F5FA;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 21px;
 }
 
 .footer_address_block {
@@ -650,4 +704,502 @@ footer::before {
 .footer_email:hover {
     color: #F0145A;
 }
+
+.logo_block {
+    display: flex;
+    align-items: flex-start;
+    gap: 4px;
+}
+
+.logo_block p {
+    font-size: 36px;
+    font-weight: 400;
+}
+
+.services_main_block {
+    display: flex;
+    padding: 176px 280px 0 280px;
+    flex-direction: column;
+    align-items: center;
+    gap: 28px;
+    align-self: stretch;
+}
+
+.services_text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.services_main_block p {
+    text-align: center;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.services_button {
+    color: #FFF;
+    text-align: center;
+    font-family: Montserrat, serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: normal;
+
+    display: flex;
+    padding: 18px 30px;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+
+    border-radius: 12px;
+    border: none;
+    background-color: #24A3FF;
+    box-shadow: 0 0 20px 0 rgba(36, 163, 255, 0.50);
+}
+
+.popup {
+    display: flex;
+    padding: 30px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    border-radius: 12px;
+    background: #F5F5FA;
+    box-shadow: 0 15px 80px 0 rgba(40, 40, 86, 0.50);
+}
+
+.modal-dialog {
+    max-width: 650px;
+    top: 20%;
+}
+
+.form-label {
+    margin: 0;
+}
+
+label {
+    display: block;
+}
+
+.popup_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.popup_close_button:hover {
+    background-color: #E6E6F0;
+    border-radius: 8px;
+}
+.popup_close_button {
+    background-color: transparent;
+    border: 0;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup_svg {
+    width: 32px;
+    height: 32px;
+    flex-shrink: 0;
+}
+
+.popup_info {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-self: stretch;
+}
+
+#form_field_name, #form_field_message, #form_field_phone, #form_field_email {
+    display: flex;
+    padding: 15px;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    color: black;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+
+    border-radius: 8px;
+    border: 0 solid #FFF;
+    background: #FFF;
+}
+
+#form_field_message {
+    height: 130px;
+    resize: none;
+}
+
+#form_field_name::placeholder, #form_field_message::placeholder, #form_field_phone::placeholder, #form_field_email::placeholder {
+    color: #B3B3BA;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    display: flex;
+    align-items: flex-start;
+}
+
+/*.mb-3 input[type="text"]::placeholder {
+    position: absolute;
+    top: 15px;
+    pointer-events: none;
+    transition: top 0.3s, font-size 0.3s;
+}*/
+
+.form_field, .popup_button {
+    width: 100%;
+}
+
+.popup_data {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-self: stretch;
+}
+
+.popup_data p {
+    color: #B3B3BA;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    align-self: start;
+}
+
+.popup_button:hover {
+    background: #0085FF;
+}
+
+.popup_button:active {
+    background: #006CCF;
+}
+
+.services_area::before {
+    content: "";
+    height: 4px;
+    align-self: stretch;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.50);
+    display: block;
+}
+
+.services_area {
+    display: flex;
+    padding: 60px 280px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    align-self: stretch;
+}
+
+.services_area h3 {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.services_list {
+    display: flex;
+    align-items: flex-start;
+    gap: 60px;
+    align-self: stretch;
+}
+
+.services_list ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+    flex: 1 0 0;
+}
+
+.services_list li {
+    position: relative;
+    flex: 1 0 0;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+}
+
+.services_list li::before {
+    content: "●";
+    width: 6px;
+    color: #F0145A;
+}
+
+
+
+
+@media (max-width: 1440px) {
+
+    .block {
+        max-width: 1320px;
+    }
+
+    header, .news, footer {
+        padding-right: 60px;
+        padding-left: 60px;
+    }
+
+    .info {
+        max-width: 1080px;
+    }
+
+    .info_second {
+        max-width: 598px;
+    }
+
+    .slider_info {
+        max-width: 920px;
+    }
+
+    .slider_image {
+        min-height: 344px;
+    }
+
+    .partners {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
+    }
+
+    .partners_logo {
+        border-radius: 0;
+    }
+
+    .services_main_block, .services_area {
+        padding-left: 180px;
+        padding-right: 180px;
+    }
+
+    .services_text p {
+        max-width: 1080px;
+        width: 100%;
+        margin: 0;
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .block, .info {
+        max-width: 904px;
+    }
+
+    header, .news, footer {
+        padding-right: 60px;
+        padding-left: 60px;
+    }
+
+    .info_second {
+        max-width: 405px;
+    }
+
+    .slider_info {
+        max-width: 920px;
+    }
+
+    .slider_image {
+        min-height: 344px;
+    }
+
+    .partners {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
+    }
+
+    .partners_logo {
+        border-radius: 0;
+    }
+
+    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        --bs-gutter-x: 0;
+    }
+
+    .services_main_block, .services_area {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        --bs-gutter-x: 0;
+    }
+
+    .main_logo {
+        position: absolute;
+    }
+
+    .logo_block {
+        position: absolute;
+    }
+
+    .header_menu_info {
+        margin-bottom: 121px;
+    }
+
+    .header_nav_list {
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .block {
+        max-width: 648px;
+    }
+
+    .info {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .info .info_first {
+        padding: 0 60px;
+        display: flex;
+        width: 100%;
+        overflow: auto;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        margin-bottom: 60px;
+    }
+
+    .info .info_first::after {
+        content: '';
+        display: none;
+    }
+    .info .info_second::before {
+        content: '';
+        width: calc(100% - 60px * 2);
+        padding: 0 60px;
+        height: 4px;
+        background: rgba(255, 255, 255, 0.30);
+        position: relative;
+        top: 0;
+        right: 0;
+        margin: 0 auto 60px auto;
+    }
+
+    .info .info_second {
+        max-width: 100%;
+    }
+
+    .info .info_first::-webkit-scrollbar {
+        display: none;
+    }
+
+    .info .tab-pane {
+        padding: 0 60px;
+    }
+
+    .info .nav-link {
+        white-space: nowrap;
+    }
+
+    .advantages_list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .slider_item {
+        flex-direction: column;
+    }
+
+    .slider_image {
+        min-height: 500px;
+        border-radius: 12px 12px 0 0;
+    }
+
+    .partners {
+        padding-top: 60px;
+    }
+
+    .partners_logo {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .news_block_item {
+        min-width: 309px;
+    }
+
+    .services_main_block {
+        padding-top: 280px;
+    }
+
+    .footer_copyright {
+        position: absolute;
+        right: 60px;
+    }
+
+
+}
+
+
+
+@media (max-width: 375px) {
+
+    .dot {
+        display: none;
+    }
+
+    .partners_logo {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .services_main_block, .services_area, .news, footer {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .services_main_block h2, .news h2 {
+        font-size: 30px;
+    }
+
+    .services_list {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .footer_info {
+        align-items: center;
+    }
+
+    .footer_content {
+        gap: 30px;
+    }
+
+    .footer_content, .footer_address_block, .footer_socials {
+        flex-direction: column;
+    }
+
+    .footer_copyright {
+        position: static;
+        display: flex;
+        justify-content: center;
+    }
+
+
+}
+
+
+
+
 
