--- a/style/main.css
+++ b/style/main.css
@@ -111,7 +111,7 @@ header {
 }
 
 .header_nav_list a:hover {
-    color: #F0145A;
+    color: #FFF;
 }
 
 .header_nav_list a {
@@ -119,9 +119,23 @@ header {
 }
 
 .header_nav_list a:hover {
+    border-bottom: 2px solid #FFF;
+    padding-bottom: 3px;
+}
+
+.header_nav_list a.active {
+    color: #F0145A;
+}
+
+.header_nav_list a.active {
     border-bottom: 2px solid #F0145A;
     padding-bottom: 3px;
 }
+
+/*.header_nav_list a:active .active {
+    border-bottom: 2px solid #F0145A;
+    padding-bottom: 3px;
+}*/
 
 h1 {
     text-align: center;
@@ -280,7 +294,7 @@ h2 {
 }
 
 .advantages h2, .slider_info h2, .news h2, .services_main_block h2 {
-    background: var(--gradient-red-text, linear-gradient(90deg, #F0145A 0.84%, #EF8080 99.96%));
+    background: linear-gradient(90deg, #F0145A 0.84%, #EF8080 37%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -551,7 +565,7 @@ h2 {
     border-radius: 8px;
     overflow: hidden;
     background-color: #FFFFFF;
-    min-width: 282px;
+    min-width: 281px;
 }
 
 .news_block_item .news-img-1, .news_block_item .news-img-2, .news_block_item .news-img-3 {
@@ -708,6 +722,13 @@ footer::before {
     color: #F0145A;
 }
 
+.modal-body {
+    max-width: 359px;
+    width: 100%;
+    border-radius: 12px 12px 0 0;
+    background: var(--basic-white, #FFF);
+}
+
 .logo_block {
     display: flex;
     align-items: flex-start;
@@ -773,11 +794,6 @@ footer::before {
     box-shadow: 0 15px 80px 0 rgba(40, 40, 86, 0.50);
 }
 
-.modal-dialog {
-    max-width: 650px;
-    top: 20%;
-}
-
 .form-label {
     margin: 0;
 }
@@ -827,7 +843,7 @@ label {
     align-items: flex-start;
     gap: 10px;
     align-self: stretch;
-    color: black;
+    color: #000;
     font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
@@ -837,6 +853,10 @@ label {
     border-radius: 8px;
     border: 0 solid #FFF;
     background: #FFF;
+}
+
+#form_field_name:focus, #form_field_message:focus, #form_field_phone:focus, #form_field_email:focus {
+    border: 1px solid #24A3FF;
 }
 
 #form_field_message {
@@ -854,13 +874,6 @@ label {
     display: flex;
     align-items: flex-start;
 }
-
-/*.mb-3 input[type="text"]::placeholder {
-    position: absolute;
-    top: 15px;
-    pointer-events: none;
-    transition: top 0.3s, font-size 0.3s;
-}*/
 
 .form_field, .popup_button {
     width: 100%;
@@ -964,12 +977,11 @@ label {
     outline: inherit;
 }
 
-#menu-modal {
-    color: red;
-}
-
 .animate-bottom-menu {
-    left: 0;
+    min-height: 351px;
+    width: auto;
+    left: 8px;
+    right: 8px;
     bottom: 0;
     position: fixed;
     animation: animatebottom 0.4s;
@@ -987,7 +999,7 @@ label {
     }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1919px) {
 
     .block {
         max-width: 1320px;
@@ -1036,7 +1048,7 @@ label {
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1439px) {
 
     .block, .info {
         max-width: 904px;
@@ -1079,7 +1091,7 @@ label {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
 
     .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
         --bs-gutter-x: 0;
@@ -1102,8 +1114,16 @@ label {
         justify-content: flex-start;
     }
 
-    .block {
-        max-width: 648px;
+    .address {
+        color: #B3B3BA;
+    }
+
+    .block, .header_menu_block {
+        max-width: 767px;
+    }
+
+    .header_menu_info, .header_nav_list {
+        justify-content: flex-start;
     }
 
     .info {
@@ -1183,32 +1203,88 @@ label {
         padding-top: 280px;
     }
 
+    .gradient_3_block {
+        padding-bottom: 60px;
+    }
+
+    .services_news {
+        border-radius: 12px 12px 0 0;
+    }
+
     .footer_copyright {
         position: absolute;
         right: 60px;
     }
-
-
 }
 
 
-@media (max-width: 375px) {
+@media (max-width: 767px) {
 
     .dot {
         display: none;
     }
 
-    .partners_logo {
-        grid-template-columns: repeat(3, 1fr);
+    h1 {
+        max-width: 315px;
+        width: 100%;
     }
 
-    .services_main_block, .services_area, .news, footer {
+    .info {
+        padding: 30px 0;
+    }
+
+    .info .info_first {
+        margin-bottom: 30px;
+    }
+
+    .info .info_second::before {
+        margin-bottom: 30px;
+    }
+
+    .advantages_list {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .advantages h2, .slider_info h2 {
+        font-size: 30px;
+    }
+
+    .advantages_list {
+        padding-top: 30px;
+        gap: 30px;
+    }
+
+    .slider_image {
+        border-radius: ;
+    }
+
+    .partners_logo {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .partners_logo .partners_item:nth-child(n+7) {
+        display: none;
+    }
+
+    .info .info_second::before {
+        width: calc(100% - 30px * 2);
+    }
+
+    .services_main_block {
+        padding-top: 177px;
+    }
+
+    .services_main_block, .services_area, .slider, .news, .advantages, .info .info_first, .info .tab-pane, header, footer {
         padding-left: 30px;
         padding-right: 30px;
     }
 
     .services_main_block h2, .news h2 {
         font-size: 30px;
+    }
+
+    .services_area {
+        padding-top: 30px;
     }
 
     .services_list {
@@ -1234,17 +1310,122 @@ label {
         justify-content: center;
     }
 
-    .main_logo {
-        position: static;
+    header {
+        padding: 0;
+        width: 100%;
     }
 
-    .header_menu_block {
+    .main_logo {
+        position: absolute;
+        padding-bottom: 10px;
+        padding-left: 15px;
+    }
+
+    .main_logo img {
+        width: 69.3px;
+        height: 32px;
+    }
+
+    .address, .facebook_header, .dot, .header_nav {
         display: none;
     }
 
+    .header_menu {
+        padding-top: 0;
+        align-items: end;
+    }
+
+    .header_menu_info {
+        display: flex;
+        justify-content: space-between;
+        box-sizing: content-box;
+        padding: 10px 15px;
+        background: rgba(245, 245, 250, 0.20);
+    }
+
+    .header_menu_block {
+        height: 107px;
+    }
+
+
     .header_mobile_menu_block {
         display: block;
+        position: absolute;
+        right: 0;
+        padding-right: 15px;
+        padding-bottom: 12.5px;
     }
+
+    .header_mobile_menu_block svg:active {
+        fill: #E6E6F0;
+    }
+
+    .modal-content {
+        display: flex;
+        flex-direction: column;
+        padding: 12px;
+        gap: 20px;
+    }
+
+
+    .modal button {
+        display: flex;
+        justify-content: flex-end;
+        border: none;
+        background-color: #FFFFFF;
+        padding: 0;
+    }
+
+    .header_nav_list {
+        display: flex;
+        flex-direction: column;
+}
+
+    .header_nav_list a {
+        color: #24A3FF;
+        text-align: center;
+        font-family: Montserrat;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: normal;
+        border-bottom: none;
+        margin-bottom: 0;
+    }
+
+    .header_nav_list li {
+        display: flex;
+        padding: 7px 0px;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 10px;
+        align-self: stretch;
+        border-radius: 12px;
+        background: #F5F5FA;
+    }
+
+    .header_nav_list a:active {
+        color: #F0145A;
+    }
+
+    .header_nav_list a:hover {
+        border-color: #24A3FF;
+        border-bottom: none;
+
+    }
+
+    .header_nav_list:focus, .header_nav_list:hover {
+        color: #24A3FF;
+    }
+
+
+    #menu-modal {
+
+    }
+
+    .modal-dialog {
+        background: rgba(245, 245, 250, 0.20);}
+
+
 
 }
 
